--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,12 @@
 		<%= link_to "Sign Up", new_user_registration_path %>
 	<% end %>
 
+	<br/>
+	<%= link_to "Home", root_path %>
+	<%= link_to "About", page_about_path %>
+	<%= link_to "Faqs", page_faqs_path %>
+	<%= link_to "Contact", page_contact_path %>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
