--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Cart#index</h1>
-<p>Find me in app/views/cart/index.html.erb</p>
+<h1>Your Cart</h1>
+<%= link_to 'Empty the Cart', cart_clear_path %>
+<p><br>
+
+<% total = 0 %>
+
+<ul>
+	<% @cart.each do | id , quantity | %>
+		<% product = Product.find(id) %>
+		<li>
+			<%= link_to product.title, product %>
+			<p><%= product.description %>
+			<p><%= number_to_currency(product.price, unit: '$') %>
+			<p>Quantity: <%= quantity %>
+		</li>
+		<% total += quantity * product.price %>
+	<% end %>
+	<p><br><strong>Total:<%= number_to_currency(total, unit: '$') %></strong></p>
+</ul>
